# Autotests

./: .dockerignore  .drone.yml  .gitignore  Dockerfile  README.md  graph_queries.py  graphql.py  stores_api_test.py  test_api_2.0.py  test_api_graphql.py  test_api_test.py  users_api_test.py
functional-tests/: .gitattributes  Cargo.toml  README.md
functional-tests/config/: base.toml  dev.toml  k8s.toml  nightly.toml  test.toml
functional-tests/docker/: docker-compose.yml
functional-tests/graphql/: schema.json
functional-tests/graphql/queries/: add_attribute_to_category.graphql  add_base_product_to_coupon.graphql  add_in_cart.graphql  add_in_cart_v2.graphql  add_package_to_company.graphql  apply_password_reset.graphql  change_password.graphql  clear_cart.graphql  create_attribute.graphql  create_attribute_value.graphql  create_base_product.graphql  create_base_product_with_variants.graphql  create_category.graphql  create_coupon.graphql  create_custom_attribute.graphql  create_delivery_company.graphql  create_package.graphql  create_product.graphql  create_store.graphql  create_store_subscription.graphql  create_user.graphql  create_user_delivery_address_full.graphql  create_warehouse.graphql  create_wizard_store.graphql  deactivate_base_product.graphql  deactivate_product.graphql  deactivate_store.graphql  (+62 more)
functional-tests/k8s/: 00-cm-functional-tests.yml  20-svc-functional-tests.yml  30-deploy-functional-tests.yml
functional-tests/src/: config.rs  context.rs  defaults.rs  lib.rs  main.rs  microservice.rs  request.rs
functional-tests/tests/: basic_tests.rs
(+238 files in other folders)
