[package]
name = "functional-tests"
version = "0.1.0"
authors = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
config = { version = "0.9", default-features = false, features = ["toml"] }
failure = "0.1"
futures = "0.1"
hyper = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-core = "0.1"
uuid = { version = "0.6", features = ["use_std", "v4", "serde"] }
diesel = { version = "1.3.3", features = ["postgres", "chrono", "extras"] }

graphql_client = "0.5.1"
reqwest = "0.9.5"
